# WillEngineV3

./: .gitignore  CMakeLists.txt  build_game.bat  compile_shaders.bat  main.cpp
src/asset-load/: CMakeLists.txt  asset_load_config.h  asset_load_job.cpp  asset_load_job.h  asset_load_thread.cpp  asset_load_thread.h  asset_load_types.cpp  asset_load_types.h  async_asset_load_thread.cpp  async_asset_load_thread.h  i_loadable_asset.h  texture_load_job.cpp  texture_load_job.h  texture_loader.cpp  texture_loader.h  will_model_asset.cpp  will_model_asset.h  will_model_load_job.cpp  will_model_load_job.h  will_model_loader.cpp  will_model_loader.h
src/asset-load/asset-load-jobs/: asset_load_job.h  audio_load_job.cpp  audio_load_job.h  pipeline_load_job.cpp  pipeline_load_job.h  texture_load_job.cpp  texture_load_job.h  will_model_load_job.cpp  will_model_load_job.h
src/audio/: CMakeLists.txt  audio_asset.cpp  audio_asset.h  audio_manager.cpp  audio_manager.h
src/core/: CMakeLists.txt  will_engine.cpp  will_engine.h
src/core/allocators/: free_list.cpp  free_list.h  handle.cpp  handle.h  handle_allocator.cpp  handle_allocator.h  linear_allocator.cpp  linear_allocator.h  ring_buffer.cpp  ring_buffer.h
src/core/include/: engine_context.cpp  engine_context.h  frame_sync.cpp  frame_sync.h  game_interface.cpp  game_interface.h  render_interface.cpp  render_interface.h
src/core/input/: input_frame.cpp  input_frame.h  input_manager.cpp  input_manager.h  input_utils.cpp  input_utils.h
src/core/math/: constants.cpp  constants.h  math_helpers.cpp  math_helpers.h  transform.cpp  transform.h
src/core/time/: time_frame.cpp  time_frame.h  time_manager.cpp  time_manager.h
src/editor/: CMakeLists.txt
src/editor/asset-generation/: asset_generation_types.cpp  asset_generation_types.h  asset_generator.cpp  asset_generator.h  stb_impl.cpp
src/editor/model-generation/: model_generation_types.h  model_generator.cpp  model_generator.h
src/editor/model-generator/: cgltf_impl.cpp  cgltf_write_impl.cpp  model_generator.cpp  model_generator.h  tinygltf_impl.cpp
src/engine/: CMakeLists.txt  asset_manager.cpp  asset_manager.h  asset_manager_config.h  asset_manager_types.h  components.cpp  components.h  engine_api.cpp  engine_api.h  game_model.cpp  game_model.h  material_manager.cpp  material_manager.h  will_engine.cpp  will_engine.h
src/engine/components/: camera_component.h  transform_component.h
src/game/: CMakeLists.txt  fwd_components.h  game.cpp
src/game/camera/: camera.cpp  camera.h  camera_component.h  free_camera.cpp  free_camera.h  free_camera_component.cpp  free_camera_component.h
src/game/common/: renderable_component.h
src/game/components/: component_include.h  dirty_physics_transform_component.h  renderable_component.h  transform_component.h
src/game/systems/: camera_system.cpp  camera_system.h  debug_system.cpp  debug_system.h  gather_renderables_system.cpp  physics_system.cpp  physics_system.h
src/physics/: CMakeLists.txt  body_activation_listener.cpp  body_activation_listener.h  contact_listener.cpp  contact_listener.h  physics_config.h  physics_job_system.cpp  physics_job_system.h  physics_system.cpp  physics_system.h
src/physics/layers/: broad_phase_layer_interface.cpp  broad_phase_layer_interface.h  layer_interface.cpp  layer_interface.h  object_layer_pair_filter.cpp  object_layer_pair_filter.h  object_vs_broad_phase_layer_filter.cpp  object_vs_broad_phase_layer_filter.h
src/platform/: CMakeLists.txt  crash_context.h  crash_context_win32.cpp  crash_handler.h  crash_handler_win32.cpp  directory_watcher.h  directory_watcher_win32.cpp  dll_loader.h  dll_loader_win32.cpp  paths.cpp  paths.h  paths_win32.cpp  thread_utils.h  thread_utils_win32.cpp
src/render/: CMakeLists.txt  frame_resources.cpp  frame_resources.h  render_config.cpp  render_config.h  render_constants.cpp  render_constants.h  render_thread.cpp  render_thread.h  resource_manager.cpp  resource_manager.h  texture_asset.cpp  texture_asset.h  vk_config.cpp  vk_context.cpp  vk_context.h  vk_helpers.cpp  vk_helpers.h  vk_imgui_wrapper.cpp  vk_imgui_wrapper.h  vk_operation_ring_buffer.cpp  vk_operation_ring_buffer.h  vk_render_extents.h  vk_render_resources.cpp  vk_render_resources.h  vk_render_targets.cpp  vk_render_targets.h  vk_resource_manager.h  vk_resources.cpp  vk_resources.h  vk_swapchain.cpp  vk_swapchain.h  vk_synchronization.cpp  vk_synchronization.h  vk_utils.cpp  vk_utils.h
src/render/descriptors/: vk_bindless_resources_combined.cpp  vk_bindless_resources_combined.h  vk_bindless_resources_sampler_images.cpp  vk_bindless_resources_sampler_images.h  vk_bindless_resources_storage.cpp  vk_bindless_resources_storage.h  vk_bindless_transient_rdg_resources.cpp  vk_bindless_transient_rdg_resources.h  vk_descriptors.cpp  vk_descriptors.h
src/render/model/: model_format.cpp  model_format.h  model_serialization.cpp  model_serialization.h  model_types.cpp  model_types.h  will_model_asset.cpp  will_model_asset.h
src/render/pipelines/: basic_compute_pipeline.cpp  basic_compute_pipeline.h  basic_render_pipeline.cpp  basic_render_pipeline.h  compute_pipeline.cpp  compute_pipeline.h  graphics_pipeline_builder.cpp  graphics_pipeline_builder.h  mesh_shader_pipeline.cpp  mesh_shader_pipeline.h  mesh_shading_direct_pipeline.cpp  mesh_shading_direct_pipeline.h  mesh_shading_instanced_pipeline.cpp  mesh_shading_instanced_pipeline.h  pipeline_category.cpp  pipeline_category.h  pipeline_data.cpp  pipeline_data.h  pipeline_manager.cpp  pipeline_manager.h  shadow_mesh_shading_instanced_pipeline.cpp  shadow_mesh_shading_instanced_pipeline.h  vk_pipeline.cpp  vk_pipeline.h
src/render/render-graph/: render_graph.cpp  render_graph.h  render_pass.cpp  (+4 more)
tests/: CMakeLists.txt
tests/data-structures/: free_list_tests.cpp  handle_allocator_tests.cpp  handle_tests.cpp  ring_buffer_tests.cpp
tests/renderer/: allocated_resources_tests.cpp  descriptor_layout_builder_tests.cpp  frustum_tests.cpp  model_data_tests.cpp  pipeline_builder_tests.cpp  render_extents_tests.cpp  shader_interop_tests.cpp  vk_helpers_tests.cpp
(+85 files in other folders)
